WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209371
telerik.com : Placeholder text is misaligned in search text box
https://bugs.webkit.org/show_bug.cgi?id=209371
Summary
telerik.com : Placeholder text is misaligned in search text box
alan
Reported
2020-03-20 20:06:15 PDT
<
rdar://problem/45945564
>
Attachments
Patch
(4.23 KB, patch)
2020-03-20 20:15 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(6.24 KB, patch)
2020-03-20 21:49 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(7.16 KB, patch)
2020-03-21 06:44 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2020-03-20 20:15:07 PDT
Created
attachment 394155
[details]
Patch
alan
Comment 2
2020-03-20 20:15:59 PDT
Collecting EWS baselines first since it changes some internal positioning/sizing. Review later.
alan
Comment 3
2020-03-20 21:49:54 PDT
Created
attachment 394157
[details]
Patch
alan
Comment 4
2020-03-21 06:44:32 PDT
Created
attachment 394166
[details]
Patch
EWS
Comment 5
2020-03-21 07:11:05 PDT
Committed
r258806
: <
https://trac.webkit.org/changeset/258806
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 394166
[details]
.
Aakash Jain
Comment 6
2020-03-23 11:46:09 PDT
(In reply to EWS from
comment #5
)
> Committed
r258806
: <
https://trac.webkit.org/changeset/258806
>
Seems like fast/forms/placeholder-content-center.html is failing consistently on windows. History:
https://results.webkit.org/?suite=layout-tests&test=fast%2Fforms%2Fplaceholder-content-center.html
alan
Comment 7
2020-03-23 11:46:59 PDT
(In reply to Aakash Jain from
comment #6
)
> (In reply to EWS from
comment #5
) > > Committed
r258806
: <
https://trac.webkit.org/changeset/258806
> > Seems like fast/forms/placeholder-content-center.html is failing > consistently on windows. > > History: >
https://results.webkit.org/?suite=layout
- > tests&test=fast%2Fforms%2Fplaceholder-content-center.html
will skip
alan
Comment 8
2020-03-23 15:00:16 PDT
Committed
r258878
: <
https://trac.webkit.org/changeset/258878
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug