telerik.com: Placeholder text is misaligned in search text box https://bugs.webkit.org/show_bug.cgi?id=209371 <rdar://problem/45945564>

Reviewed by Antti Koivisto.

Source/WebCore:

Let the placeholder box do its own vertical positioning/sizing.
The placeholder box's height is currently set to the height of the editable renderer (sibling box), so when the ::placeholder has
a large font-size set, the text is oddly positioned and gets cut off (the placeholder box has 'overflow: hidden' UA style).
This patch makes the placeholder box center aligned and sized based on the used size (matches both Chrome and FF).

Test: fast/forms/placeholder-content-center.html

* rendering/RenderTextControlSingleLine.cpp:
(WebCore::RenderTextControlSingleLine::layout):

LayoutTests:

* fast/forms/placeholder-content-center-expected.html: Added.
* fast/forms/placeholder-content-center.html: Added.


Canonical link: https://commits.webkit.org/222311@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258806 268f45cc-cd09-0410-ab3c-d52691b4dbfc